--- a/css/styles.css
+++ b/css/styles.css
@@ -8,32 +8,24 @@ body {
 h1 {
   color: #66BFBF;
   font-size: 5.625rem;
-  margin: 50px auto 0 auto;
-  font-family: 'Sacramento', cursive;
+  /* 100% = 16px, 1em = 16px */
+  line-height: 2;
+  margin: 50px auto 0;
+  font-family: 'Satisfy', cursive;
 }
 
 h2 {
-  color: #66BFBF;
   font-family: 'Montserrat', sans-serif;
   font-size: 2.5rem;
+  line-height: 2;
+  color: #66BFBF;
   font-weight: normal;
-  padding-bottom: 10px;
 }
 
 h3 {
-  color: #11999E;
   font-family: 'Montserrat', sans-serif;
-}
-
-p {
-  line-height: 2;
-}
-
-hr {
-  border: dotted #EAF6F6 6px;
-  border-bottom: none;
-  width: 4%;
-  margin: 100px auto;
+  color: #11999E;
+  font-weight: normal;
 }
 
 a{
@@ -47,8 +39,15 @@ a:hover {
   color: #EAF6F6;
 }
 
+hr {
+  border: dotted #7e8a97 10px;
+  border-bottom: none;
+  width: 4%;
+  margin: 100px auto;
+}
+
 .top-container {
-  background-color: #E4F9F5;
+  background-color: #faf3dd;
   position: relative;
   padding-top: 100px;
 }
@@ -58,83 +57,100 @@ a:hover {
 }
 
 .bottom-container {
-  background-color: #66BFBF;
+  background-color: #faf3dd;
   padding: 50px 0 20px;
-}
-
-.skill-row {
-  width: 50%;
-  margin: 100px auto 100px auto;
-  text-align: left;
 }
 
 .pro {
   text-decoration: underline;
 }
 
-.intro {
-  width: 30%;
+.profile {
   margin: auto;
-}
-
-.contact-message {
-  width: 40%;
-  margin: 40px auto 60px;
-}
-
-.copyright {
-  color: #EAF6F6;
-  font-size: 0.75rem;
-  padding: 20px 0;
 }
 
 .top-cloud {
   position: absolute;
   right: 300px;
-  top: 40px;
+  top: 50px;
 }
 
 .bottom-cloud {
   position: absolute;
-  left: 250px;
+  left: 300px;
   bottom: 300px;
+}
+
+.profile-img {
+  border-radius: 50%;
+}
+
+.skill-row {
+  width: 50%;
+  margin: auto;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  text-align: left;
+  line-height: 2;
 }
 
 .code-img {
   width: 25%;
+  border-radius: 50%;
   float: left;
   margin-right: 30px;
 }
 
-.chilli-img {
-  width: 25%;
+.pep-pizza {
+  width: 20%;
+  border-radius: 50%;
   float: right;
   margin-left: 30px;
 }
 
+.intro-text {
+  margin: auto;
+  width: 30%;
+}
+
+.end-text {
+  margin: 50px auto;
+  width: 30%;
+}
+
+.copyright {
+  font-size: 12px;
+  color: black;
+  padding: 20px 0;
+}
+
 .btn {
-  background: #11cdd4;
-  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
-  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
-  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
-  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
-  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
-  -webkit-border-radius: 8;
-  -moz-border-radius: 8;
+  background: #33B9B9;
+  background-image: -webkit-linear-gradient(top, #33B9B9, #2097C7);
+  background-image: -moz-linear-gradient(top, #33B9B9, #2097C7);
+  background-image: -ms-linear-gradient(top, #33B9B9, #2097C7);
+  background-image: -o-linear-gradient(top, #33B9B9, #2097C7);
+  background-image: linear-gradient(to bottom, #33B9B9, #2097C7);
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
   border-radius: 8px;
+  color: #FFFFFF;
   font-family: 'Montserrat', sans-serif;
-  color: #ffffff;
   font-size: 20px;
-  padding: 10px 20px 10px 20px;
+  padding: 20px;
   text-decoration: none;
 }
 
 .btn:hover {
-  background: #30e3cb;
-  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
-  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
-  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
-  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
-  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  border: solid #337FED 0;
+  background: #81D7F1;
+  background-image: -webkit-linear-gradient(top, #81D7F1, #35ADAD);
+  background-image: -moz-linear-gradient(top, #81D7F1, #35ADAD);
+  background-image: -ms-linear-gradient(top, #81D7F1, #35ADAD);
+  background-image: -o-linear-gradient(top, #81D7F1, #35ADAD);
+  background-image: linear-gradient(to bottom, #81D7F1, #35ADAD);
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
   text-decoration: none;
 }
